# memworld-quest

./: .gitattributes  .gitignore  CONNECTIONS.md  ENVIROMENT_MAC.md  ENVIROMENT_WIN.md  OPERATOR_GUIDE.md  OPERATOR_GUIDE_WIN.md  PLAN.md  README.md  pyproject.toml
hand_tracking_streamer/Assets/Oculus/: OculusProjectConfig.asset
hand_tracking_streamer/Assets/Plugins/Android/: AndroidManifest.xml
hand_tracking_streamer/Assets/Resources/: OculusRuntimeSettings.asset
hand_tracking_streamer/Assets/Scenes/: Scene.unity
hand_tracking_streamer/Assets/Scripts/: AppManager.cs  HandLandmarkStreamer.cs  HeadPoseStreamer.cs  QuestCameraCapture.cs  QuestCameraUplinkManager.cs  QuestStreamClock.cs  QuestVideoSender.cs
hand_tracking_streamer/Assets/Settings/: Mobile_RPAsset.asset  UniversalRenderPipelineGlobalSettings.asset
hand_tracking_streamer/Assets/XR/Settings/: OpenXR Package Settings.asset
hand_tracking_streamer/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
scripts/: export_stage_combinations.py  generate_segment_contact_sheets.py  hts_dataset_utils.py  quest_camera_receiver.py  record_quest_dataset.py  reproject_quest_dataset.py
